[tool.poetry]
name = "helloworld"
version = "0.1.0"
description = "Embedded CI Test"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyserial = "^3.4"
"rpi.gpio" = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
